Deleted some not needed methods from the GraphInterface and GXGraph. Added some TODOs to DisplayModel to better differentiat between Graph functions and DP functions.